Please HALP (II)

--- a/plastic.html
+++ b/plastic.html
@@ -160,6 +160,34 @@
             </div>
           </div>
 		</div>
+		
+		<div class="col-md-4 portfolio-item no-padding">
+		  <div class="row">
+			<div class="col-md-6 no-padding">
+				<img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
+			</div>
+			<div class="col-md-6 no-padding">
+				<img class="img-fluid" src="img/plastics/pl13.jpg" alt="">
+			</div>
+	   	    <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/plastics/pl14.jpg" alt="">
+            </div>
+			</div>
+		</div>	
+		
+		<div class="col-md-4 portfolio-item no-padding">
+		  <div class="row">
+			<div class="col-md-6 no-padding">
+				<img class="img-fluid" src="img/plastics/pl15.jpg" alt="">
+			</div>
+			<div class="col-md-6 no-padding">
+				<img class="img-fluid" src="img/plastics/pl16.jpg" alt="">
+			</div>
+	   	    <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/plastics/pl17.jpg" alt="">
+            </div>
+			</div>
+		</div>	
     
       	  
 	  
