Auto stash before revert of "Please HALP (I)"

--- a/plastic.html
+++ b/plastic.html
@@ -193,23 +193,23 @@
 	  
 	<div class="row">
         <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/plastics/pl.jpg" alt="">
+          <img class="img-fluid" src="img/plastics/IC01.jpg" alt="">
         </div>
         <div class="col-md-4 portfolio-item no-padding">
 			<div class="row">
 				<div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/pl.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/IC02.jpg" alt="">
         </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/IC03.jpg" alt="">
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/pl13.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/IC04.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/plastics/pl14.jpg" alt="">
+              <img class="img-fluid" src="img/plastics/IC05.jpg" alt="">
             </div>
           </div>
         </div>
