--- a/plastic.html
+++ b/plastic.html
@@ -155,27 +155,29 @@
       </div>
 		
 		<div class="row">
-		<div class="col-md-4 portfolio-item no-padding">
-		<div class="col-md-6 no-padding">
-			<img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
+		 <div class="col-md-3 portfolio-item no-padding">
+		  <img class="img-fluid" src="img/plastics/pl12.jpg" alt="">
+		 </div>
+		 <div class="col-md-3 portfolio-item no-padding">
+		<div class="row">
+		 <img class="img-fluid" src="img/plastics/pl13.jpg" alt="">
+         <img class="img-fluid" src="img/plastics/pl14.jpg" alt="">
+        </div>				
 		</div>
-		</div>
-		<div class="col-md-2 portfolio-item no-padding">	
-			<img class="img-fluid" src="img/plastics/pl13.jpg" alt="">
-            <img class="img-fluid" src="img/plastics/pl14.jpg" alt="">
-            </div>				
 		
-		<div class="col-md-4 portfolio-item no-padding">
-		<div class="col-md-6 no-padding">
+		
+		<div class="row">
+		<div class="col-md-3 portfolio-item no-padding">
 			<img class="img-fluid" src="img/plastics/pl15.jpg" alt="">
 		</div>
-		</div>
-		<div class="col-md-2 portfolio-item no-padding">	
+		<div class="col-md-3 no-padding">
+		<div class="row">
 			<img class="img-fluid" src="img/plastics/pl16.jpg" alt="">
-            <img class="img-fluid" src="img/plastics/pl17.jpg" alt="">
-            </div>
+            <img class="img-fluid" src="img/plastics/pl17.jpg" alt="">		
 		</div>
-    
+		</div>
+		</div>
+		</div>
   
 	
         <div class="row">
@@ -228,7 +230,6 @@
 	  <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/plastics/st01.jpg" alt="">
         </div>
-		
         <div class="col-md-4 portfolio-item no-padding">
           <div class="row">
             <div class="col-md-6 no-padding">
