--- a/plastic.html
+++ b/plastic.html
@@ -166,7 +166,6 @@
 		</div>
 		
 		
-		<div class="row">
 		<div class="col-md-3 portfolio-item no-padding">
 			<img class="img-fluid" src="img/plastics/pl15.jpg" alt="">
 		</div>
@@ -177,7 +176,7 @@
 		</div>
 		</div>
 		</div>
-		</div>
+		
   
 	
         <div class="row">
@@ -220,6 +219,7 @@
         </div>
 	
 	  
+	  <br/>
 	  <div class="row">
           <div class="col-md-4">
 		  <div class="portfolio-caption">
@@ -243,7 +243,7 @@
             <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/plastics/st04.jpg" alt="">
             </div>
-            <div class="col-md-6 no-padding">
+            <div class="col-md-6">
               <img class="img-fluid" src="img/plastics/st05.jpg" alt="">
             </div>
           </div>
