Yes-Padding St05

--- a/plastic.html
+++ b/plastic.html
@@ -243,7 +243,7 @@
             <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/plastics/st04.jpg" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/plastics/st05.jpg" alt="">
             </div>
           </div>
