--- a/card-technology.html
+++ b/card-technology.html
@@ -186,7 +186,7 @@
         </div>
     </div>
 		
-		<br/> 
+	<br/> 
 	<div class="row">
         <div class="col-md-4 portfolio-item">
 			<h4>Scratch-Off Foils</h4>
@@ -199,6 +199,35 @@
             <img class="img-fluid" src="img/Card/so02.jpg" alt="">
         </div>
     </div>
+	
+	<br/>
+        <div class="row-special">
+		 <div class="col-md-8 portfolio-item no-padding">
+		  <div class="row-special">
+		   <div class="col-md-6 no-padding">
+            <img class="img-fluid" src="img/Card/MA01.jpg" alt="">
+           </div>
+           <div class="col-md-6 no-padding">
+			<img class="img-fluid" src="img/Card/MA02.jpg" alt="">
+		   </div>
+		  </div>
+		  <div class="row-special">
+           <div class="col-md-6 no-padding">
+            <img class="img-fluid" src="img/Card/MA03.jpg" alt="">
+           </div>
+            <div class="col-md-6 no-padding">
+            <img class="img-fluid" src="img/Card/MA04.jpg" alt="">
+            </div>
+		  </div>
+		</div>
+		<div class="col-md">
+          <div class="portfolio-caption">
+            <h4>Application Machines</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          </div>
+        </div>
+		</div>
+	
   </section>
 
   <!-- Footer -->
