--- a/high-security.html
+++ b/high-security.html
@@ -93,250 +93,52 @@
         </div>
       </div>
       
-	  <div class="row">
-        <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+	<div class="row-special">
+        <div class="col-md-5 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/n01.jpg" alt="">
+		  <img class="img-fluid" src="img/HISEC/n03.jpg" alt="">
         </div>
-        <div class="col-md-4 portfolio-item no-padding">
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars</h4>
+		<div class="col-md-2 portfolio-item">
+		<img class="img-fluid" src="img/HISEC/n04.jpg" alt="">
+		<img class="img-fluid" src="img/HISEC/n05.jpg" alt="">
+		<img class="img-fluid" src="img/HISEC/n06.jpg" alt="">
+        </div>  
+		<div class="col-md-4">
+		  <div class="portfolio-caption">
+            <h4>Banknote Security</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
         </div>
-    </div>
-	  
-	<div class="row">
+	</div>
+	
+	<br/>
+	<div class="row-special">
         <div class="col-md-4 portfolio-item no-padding">
-            <h4>Consumer Goods Packaging</h4>
+            <h4>Government Documents</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
         </div>
-	    <div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+	    <div class="col-md-4 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/G01.jpg" alt="">
         </div>
-		</div>
-        <div class="col">
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
-        </div>
-    </div>
-      	  
-	  
-	<div class="row">
-        <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
-        </div>
-        <div class="col-md-4 portfolio-item no-padding">
-			<div class="row">
-				<div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-        </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
-        </div>
-       	<div class="col-md">
-          <div class="portfolio-caption">
-            <h4>Cigarette Boxes</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+		<div class="col-md-4 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/G02.jpg" alt="">                        
         </div>
     </div>
 	
-	  
-	  <div class="row">
-          <div class="col-md-4 portfolio-item no-padding">
-            <h4>Books, Magazines, Calendars</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
-	  <div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
-          <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+	<div class="row-special">
+      	<div class="col-md-4 portfolio-item">
+		  <img class="img-fluid" src="img/HISEC/G03.jpg" alt="">
         </div>
-		</div>
-        <div class="col">
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
+		<div class="col-md-4 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/G04.jpg" alt="">                        
         </div>
+	<div class="col-md-4 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/G05.jpg" alt="">                        
         </div>
-      </div>
-	  
-	  
-	  
-	  <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-               <!--<i class="fas fa-plus fa-3x"></i>-->
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs01.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Bank Notes</h4>
-         <p class="text-muted"></p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-               </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs02.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>ID Cards</h4>
-            <!--<p class="text-muted">Graphic Design</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs03.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Passports</h4>
-           <!-- <p class="text-muted">Identity</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs04.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Visas</h4>
-           <!-- <p class="text-muted">Branding</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs05.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Driver's License</h4>
-           <!-- <p class="text-muted">Website Design</p>-->
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs06.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Vehicle Documents</h4>
-           <!-- <p class="text-muted">Photography</p>-->
-          </div>
-        </div>
-		 <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs07.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Breeder Documents</h4>
-           <p class="text-muted">Birth, marriage and deaths certificates</p>
-          </div>
-        </div>
-		<div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs08.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Tax Stamps</h4>
-           <p class="text-muted"></p>
-          </div>
-        </div>
-		<div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/HISEC/hs09.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Tax Stamps</h4>
-           <p class="text-muted"></p>
-          </div>
-        </div>
+		<div class="col-md-4 portfolio-item">
+          <img class="img-fluid" src="img/HISEC/G06.jpg" alt="">                        
+        </div>		 	
+      </div>	  	  	
   </section>
 
   <!-- Footer -->
