Change Dropdown Details
"Hot Stamping Dies" to "Stamping Tools"

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
               <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Hot Stamping Dies</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
             </div>
           </li>
           <!--<li class="nav-item">
