--- a/hot-stamping-dies.html
+++ b/hot-stamping-dies.html
@@ -55,7 +55,7 @@
               <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
               <a class="nav-link dropdown-item" href="digital-metal.html">Digital Metal&reg;</a>
               <a class="nav-link dropdown-item" href="high-security.html">High Security</a>
-              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Hot Stamping Dies</a>
+              <a class="nav-link dropdown-item" href="hot-stamping-dies.html">Stamping Tools</a>
             </div>
           </li>
           <!--<li class="nav-item">
@@ -94,20 +94,33 @@
       </div>
       
 	  <div class="row">
-        <div class="col-md-8 portfolio-item no-padding">
-          <img class="img-fluid" src="img/hsd/ht01.jpg" alt="">
+        <div class="col-md-4 portfolio-item no-padding">
+          <img class="img-fluid" src="img/hsd/ht02.jpg" alt="">
+		  <img class="img-fluid" src="img/hsd/ht04.jpg" alt="">
+		</div>
+		<div class="col-md-4 portfolio-item no-padding">
+		  <img class="img-fluid" src="img/hsd/ht03.jpg" alt="">
+		  <img class="img-fluid" src="img/hsd/ht05.jpg" alt="">
         </div>
         <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>H+M Dies & Tools</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
+		  <div class="portfolio-caption">
+            <br/>
+			<br/>
+			<h4>Accessories</h4>
+			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. </p>
+            <p class="text-muted"> &#8226 &nbsp Adhesive Tapes <br> &#8226 &nbsp Rubber Mats <br> &#8226 &nbsp Make-Ready Materials <br> &#8226 &nbsp Copper Brush <br> &#8226 &nbsp Polishing Paste</p>
+          </div>
         </div>
     </div>
+		
 	  
 	  
 	  
-	  
+	  <br/>
 	  <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/hsd/hs01.jpg" alt="">
@@ -142,7 +155,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
-            <img class="img-fluid" src="img/hsd/hs05.jpg" alt="">
+            <img class="img-fluid" src="img/hsd/ht01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Silicone Dies</h4>
