--- a/ttr-coding.html
+++ b/ttr-coding.html
@@ -192,7 +192,7 @@
 	<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item no-padding">
             <h4>Coding</h4>
-            <p class="text-muted">Thermal-transfer foils in your corporate color. Anyone can do black. Color print catches eyes.</p>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 		   <div class="col-md-4 no-padding">
             <img class="img-fluid" src="img/TTR/c01.jpg" alt="">
